RESOLVED FIXED190485
CRASH in WebCore::MediaPlayerPrivateAVFoundation::setPreload
https://bugs.webkit.org/show_bug.cgi?id=190485
Summary CRASH in WebCore::MediaPlayerPrivateAVFoundation::setPreload
Jer Noble
Reported 2018-10-11 14:18:15 PDT
CRASH in WebCore::MediaPlayerPrivateAVFoundation::setPreload
Attachments
Patch (2.73 KB, patch)
2018-10-11 14:24 PDT, Jer Noble
no flags
Patch for landing (2.72 KB, patch)
2018-10-11 14:47 PDT, Jer Noble
no flags
Archive of layout-test-results from ews112 for mac-sierra (3.19 MB, application/zip)
2018-10-11 16:40 PDT, EWS Watchlist
no flags
Jer Noble
Comment 1 2018-10-11 14:18:54 PDT
Jer Noble
Comment 2 2018-10-11 14:24:51 PDT
Eric Carlson
Comment 3 2018-10-11 14:29:21 PDT
Comment on attachment 352077 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=352077&action=review > Source/WebCore/ChangeLog:13 > + HTMLMediaElement). Code inspection hasn't yielded any good hints about why this might be occurring, so we wil Nit: s/we wil/we will/
Jer Noble
Comment 4 2018-10-11 14:47:12 PDT
Created attachment 352082 [details] Patch for landing
EWS Watchlist
Comment 5 2018-10-11 16:40:18 PDT
Comment on attachment 352082 [details] Patch for landing Attachment 352082 [details] did not pass mac-debug-ews (mac): Output: https://webkit-queues.webkit.org/results/9542413 New failing tests: legacy-animation-engine/accessibility/content-changed-notification-causes-crash.html
EWS Watchlist
Comment 6 2018-10-11 16:40:20 PDT
Created attachment 352102 [details] Archive of layout-test-results from ews112 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews112 Port: mac-sierra Platform: Mac OS X 10.12.6
WebKit Commit Bot
Comment 7 2018-10-12 08:28:47 PDT
Comment on attachment 352082 [details] Patch for landing Clearing flags on attachment: 352082 Committed r237067: <https://trac.webkit.org/changeset/237067>
WebKit Commit Bot
Comment 8 2018-10-12 08:28:48 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.